--- a/templates/Sequence/Carousel/template.html
+++ b/templates/Sequence/Carousel/template.html
@@ -5,9 +5,15 @@
                         <div class="item hide" id="carousel_item_{id}">
                             <div id="carousel_image_{id}" class="carousel_image">&nbsp;</div>
 
-                            <div class="carousel_caption" id="carousel_caption_{id}">
-                                <div id="carousel_text_holder_{id}" class="editable">
+                            <div class="carousel_caption caption1" id="carousel_caption_{id}">
+                                <div id="carousel_text_holder_{id}" class="text_content">
                                     <p><strong>Carousel Item {number}</strong> - This is an ideal place to enrich your learner's understanding of your topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
+                                </div>
+                            </div>
+
+                            <div class="carousel_caption caption2" id="carousel_caption2_{id}">
+                                <div id="carousel_text_holder2_{id}" class="text_content">
+                                    <p><strong>Carousel Item {number}</strong> - This second text box gives you a few more options.</p>
                                 </div>
                             </div>
                         </div>
@@ -20,31 +26,41 @@
                             <div class="active item" id="carousel_item_1">
                                 <div id="carousel_image_1" class="carousel_image">&nbsp;</div>
 
-                                <div class="carousel_caption" id="carousel_caption_1">
-                                    <div id="carousel_text_holder_1" class="editable">
+                                <div class="carousel_caption caption1" id="carousel_caption_1">
+                                    <div id="carousel_text_holder_1" class="text_content">
                                         <p><strong>Carousel Item 1</strong> - This is an ideal place to enrich your learner's understanding of your topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
                                     </div>
                                 </div>
+
+                                <div class="carousel_caption caption2" id="carousel_caption2_1">
+                                    <div id="carousel_text_holder2_1" class="text_content">
+                                        <p><strong>Carousel Item 1</strong> - This second text box gives you a few more options.</p>
+                                    </div>
+                                </div>
+
                             </div>
                             
                             <div class="item" id="carousel_item_2">
                                 <div id="carousel_image_2" class="carousel_image">&nbsp;</div>
 
-                                <div class="carousel_caption" id="carousel_caption_2">
-                                    <div id="carousel_text_holder_2" class="editable">
+                                <div class="carousel_caption caption1" id="carousel_caption_2">
+                                    <div id="carousel_text_holder_2" class="text_content">
                                        <p><strong>Carousel Item 2</strong> - This is an ideal place to enrich your learner's understanding of your topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
+                                    </div>
+                                </div>
+
+                                <div class="carousel_caption caption2" id="carousel_caption2_2">
+                                    <div id="carousel_text_holder2_2" class="text_content">
+                                        <p><strong>Carousel Item 2</strong> - This second text box gives you a few more options.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                        <!-- Carousel nav -->
-                    <div id="carousel_nav">
-                        <a class="carousel-control left" href="#carousel" data-slide="prev">Previous</a>
-                        <a class="carousel-control right" href="#carousel" data-slide="next">Next</a>
-                    </div>
-
+                    <div class="next_prev">
+                        <a class="carousel-left" href="#carousel" data-slide="prev"><i class="icon-chevron-left icon-white"></i></a>
+                        <a class="carousel-right" href="#carousel" data-slide="next"><i class="icon-chevron-right icon-white"></i></a>
+                    </div>        
 
             </div>
             <!-- START default Text_and_Images Image_Behind -->
