--- a/templates/Sequence/Concertina/template.css
+++ b/templates/Sequence/Concertina/template.css
@@ -1,6 +1,7 @@
 
+
 #text_wrapper {
-    padding-left:20px;
+	padding:0 30px 10px 20px;
 }
 
 #accordion {
@@ -12,21 +13,51 @@
 }
 
 .accordion-group {
-	margin-bottom:5px;
-	box-shadow: 1px 3px 5px 1px rgba(60, 30, 30, 0.1);
+	margin-bottom:10px;
+	border:0 none;
+	border-radius:0;
+}
 
+.accordion-heading {
 }
 
 a.accordion-toggle {
-	border-radius: 4px 4px 0 0;
 	font-weight:bold;
 	font-size:1.2em;
 	text-decoration: none;
 	opacity: 1;
+	background-color: rgba(0, 0, 0, 0.8);
 }
 
 a.accordion-toggle.collapsed {
-	border-radius: 4px;
+}
+.accordion-inner {
+	margin-top:1px;
+	border-top:0 none;
+	background-color: rgba(0, 0, 0, 0.5);
+    *zoom: 1;
+}
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+
+.accordion-inner:before,
+.accordion-inner:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.accordion-inner:after {
+    clear: both;
 }
 
 .image {
@@ -53,9 +84,6 @@ a.accordion-toggle.collapsed {
         border-radius: 0;
         border:0;
     }
-    html a.accordion-toggle {
-        border-radius: 0;
-    }
 
 	html #text_content {
 		padding:20px 20px 5px 20px;
@@ -64,11 +92,29 @@ a.accordion-toggle.collapsed {
     	padding-bottom: 10px;
 	}
 	html .accordion-inner {
-    	padding-bottom: 10px;    
+    	padding-bottom: 10px;   
+    	padding-left:20px; 
     	overflow: hidden;
 	}
 
 	html #text_wrapper {
-	    padding-left:0px;
+		padding-left:0;
+		padding-right:0;
 	}
+	.accordion-heading .accordion-toggle {
+    	padding: 8px 20px;
+	}
+	html .text_content, 
+	html .image + .text_content {
+    	padding-right: 30px;
+    	width: auto;
+    	float:none;
+    	clear:both;
+	}
+}
+
+button#add_option_button {
+	left: 20px;
+    position: relative;
+    top: 5px;
 }
