--- a/templates/Sequence/Tabs/template.html
+++ b/templates/Sequence/Tabs/template.html
@@ -1,9 +1,5 @@
 
-            <!-- START default Text_and_Images Image_Behind -->
-            <div id="background">
-                
-
-                <div id="text_wrapper" class="span11">
+                <div id="text_wrapper">
 
                     <div id="text_content">
                         <p>This accordian template allows you to explain several aspects of a topic on the same page. The learner can read through the topics at their own pace.</p>
@@ -53,6 +49,3 @@
 
                     </div>
                 </div>
-
-            </div>
-            <!-- START default Text_and_Images Image_Behind -->
