--- a/templates/Sequence/Carousel/template.html
+++ b/templates/Sequence/Carousel/template.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="next_prev">
-                        <a class="carousel-left" href="#carousel" data-slide="prev"><i class="icon-chevron-left icon-white"></i></a>
+                        <a class="carousel-left hide" href="#carousel" data-slide="prev"><i class="icon-chevron-left icon-white"></i></a>
                         <a class="carousel-right" href="#carousel" data-slide="next"><i class="icon-chevron-right icon-white"></i></a>
                     </div>        
 
