--- a/templates/Sequence/Carousel/template.html
+++ b/templates/Sequence/Carousel/template.html
@@ -2,18 +2,18 @@
             <!-- START default Text_and_Images Image_Behind -->
             <div id="background">
                     <div class="add-option-template hide" data-parent="#carousel_inner">
-                        <div class="item hide" id="carousel_item_{id}">
-                            <div id="carousel_image_{id}" class="carousel_image">&nbsp;</div>
+                        <div class="item hide" id="carousel_item_{{element.id}}">
+                            <div id="carousel_image_{{element.id}}" class="carousel_image">&nbsp;</div>
 
-                            <div class="carousel_caption caption1" id="carousel_caption_{id}">
-                                <div id="carousel_text_holder_{id}" class="text_content">
-                                    <p><strong>Carousel Item {number}</strong> - This is an ideal place to enrich your learner's understanding of your topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
+                            <div class="carousel_caption caption1" id="carousel_caption_{{element.id}}">
+                                <div id="carousel_text_holder_{{element.id}}" class="text_content">
+                                    <p><strong>Carousel Item {{element.number}}</strong> - This is an ideal place to enrich your learner's understanding of your topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
                                 </div>
                             </div>
 
-                            <div class="carousel_caption caption2" id="carousel_caption2_{id}">
-                                <div id="carousel_text_holder2_{id}" class="text_content">
-                                    <p><strong>Carousel Item {number}</strong> - This second text box gives you a few more options.</p>
+                            <div class="carousel_caption caption2" id="carousel_caption2_{{element.id}}">
+                                <div id="carousel_text_holder2_{{element.id}}" class="text_content">
+                                    <p><strong>Carousel Item {{element.number}}</strong> - This second text box gives you a few more options.</p>
                                 </div>
                             </div>
                         </div>
